Fix wrong text alignment in right position mode

--- a/app/assets/stylesheets/pageflow/page.css.scss
+++ b/app/assets/stylesheets/pageflow/page.css.scss
@@ -82,10 +82,7 @@
 
   h1, h2 span.subtitle, h2 span.tagline, h3, p {
     max-width: 500px;
-    width: 60%;
-    @include mobile {
-      width: 100%;
-    }
+    width: 100%;
   }
 
   h2 .title {
